--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "cours-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://swiichy.github.io/React-PROJECT-WORLD/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -20,8 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
